syntax = "proto3";

package com.czer.integer;

//must be used if you don't want to use fully qualified names
option java_multiple_files = true;

message IncrementIntegerRequest {
  int32 initial = 1;
  int32 noOfIncrements = 2;
}

message IncrementIntegerResponse {
  int32 nextInteger = 1;
}

message NextValueRequest{
  int32 initial = 1;
}

message NextValueResponse{
  int32 next = 1;
}

service IntegerService {
  rpc increment (IncrementIntegerRequest) returns (stream IncrementIntegerResponse) {}
  rpc next (NextValueRequest) returns (NextValueResponse) {}
}